# viyv_mcp

./: .gitignore  AGENTS.md  ANNOUNCEMENT_v0.1.14.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.14.md  SOCIAL_MEDIA_POSTS_v0.1.14.md  llms-mcp-tech.txt  pyproject.toml
example/claude_code_mcp/: .gitignore  README.md  pyproject.toml  setup.sh
example/claude_code_mcp/app/claude_workspace/: example.py  test.txt
example/claude_code_mcp/app/mcp_server_configs/: playwright.json
example/claude_code_mcp/app/tools/: chatgpt_required_tools.py  claude_cli_usage.md  claude_code_cli_tools.py
viyv_mcp/: __init__.py  __main__.py  core.py  decorators.py  openai_bridge.py  pyproject.toml
viyv_mcp/app/: asgi_builder.py  bridge_manager.py  config.py  lifespan.py  lifespan_composer.py  mcp_factory.py  mcp_initialize_fix.py  relay_key_manager.py  relay_mcp_handler.py  ws_bridge.py  ws_bridge_protocol.py  ws_bridge_session.py
viyv_mcp/app/adapters/: slack_adapter.py
viyv_mcp/app/security/: __init__.py  asgi_jwt_extractor.py  context.py  fastmcp_middleware.py  service.py  tool_registry.py
viyv_mcp/app/security/domain/: models.py  policy.py
viyv_mcp/app/security/infrastructure/: audit_writer.py  config_loader.py  jwt_codec.py
viyv_mcp/server/: __init__.py  mcp_server.py  registry.py
viyv_mcp/templates/: pyproject.toml  security.yaml.example
viyv_mcp/templates/app/: config.py
viyv_mcp/templates/app/agents/: sample_calc_agent.py  sample_notion_agent.py  sample_slack_agent.py
viyv_mcp/templates/app/entries/: sample_webhook.py
(+63 files in other folders)
