[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viyv_mcp"
version = "0.1.0"
description = "A simple wrapper library for FastMCP + Starlette"
authors = [
    { name="Your Name", email="your_email@example.com" }
]
license = "MIT"
readme = "README.md"
keywords = ["mcp", "fastmcp", "starlette", "uvicorn"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
  "starlette>=0.25.0",
  "fastmcp>=2.1.2",
  "uvicorn>=0.22.0",
  "fastapi>=0.115.12",
  "openai-agents>=0.0.13",
  "pydantic>=2",
]

# CLIエントリポイント設定
[project.scripts]
create-viyv-mcp = "viyv_mcp.cli:main"